testing/framework/resources/Advanced/Failing/mondrian/query12.e
USA	CA	Burbank	3169	Jeanne Bohrnstedt	Jeanne Bohrnstedt	M	S	Partial High School	$150K +
USA	CA	Los Angeles	193	Jeannette Eldridge	Jeannette Eldridge	M	S	Partial College	$30K - $50K
USA	CA	West Covina	5095	Jeanne Whitaker	Jeanne Whitaker	F	M	High School Degree	$30K - $50K
USA	OR	Albany	8901	Jeannette Bura	Jeannette Bura	M	M	Graduate Degree	$90K - $110K
USA	OR	Portland	3801	Jeanne Zysko	Jeanne Zysko	F	S	High School Degree	$30K - $50K
USA	WA	Everett	4739	Jeanne McDill	Jeanne McDill	M	M	High School Degree	$90K - $110K
USA	WA	Everett	6395	Jeanne Turner	Jeanne Turner	M	M	Partial High School	$10K - $30K
USA	WA	Issaquah	3	Jeanne Derry	Jeanne Derry	F	M	Bachelors Degree	$50K - $70K
USA	WA	Lynnwood	9129	Jeanne Ibarra	Jeanne Ibarra	F	S	High School Degree	$110K - $130K
USA	WA	Puyallup	7141	Jeanne Wentz	Jeanne Wentz	M	M	High School Degree	$30K - $50K
